[gd_scene load_steps=10 format=3 uid="uid://tvhpeoksv6tv"]

[ext_resource type="Script" path="res://Scripts/ToiletGame/toilet_game.gd" id="1_4yb8t"]
[ext_resource type="PackedScene" uid="uid://rk1untdw7tcn" path="res://scenes/ToiletGame/player.tscn" id="1_gowl7"]
[ext_resource type="Texture2D" uid="uid://2tlrjgo6ha8e" path="res://background_assets/BalanceGameAssets/pink bubbles.png" id="1_th1pn"]
[ext_resource type="PackedScene" uid="uid://bb13driedvmjb" path="res://scenes/ToiletGame/bulletSpawner.tscn" id="3_3a2q4"]
[ext_resource type="Script" path="res://Scripts/ToiletGame/floor-hit.gd" id="4_q074s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5l57"]
size = Vector2(1190, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i51qa"]
size = Vector2(1179, 26)

[sub_resource type="Gradient" id="Gradient_8iydw"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b3ngo"]
gradient = SubResource("Gradient_8iydw")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 1)

[node name="ToiletGame" type="Node2D"]
script = ExtResource("1_4yb8t")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -12.0
offset_top = -79.0
offset_right = 1167.0
offset_bottom = 647.0
texture = ExtResource("1_th1pn")

[node name="Player" parent="." instance=ExtResource("1_gowl7")]
position = Vector2(580, 513)

[node name="floor-hit" type="Area2D" parent="."]
position = Vector2(1, -25)
script = ExtResource("4_q074s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor-hit"]
position = Vector2(579, 641)
shape = SubResource("RectangleShape2D_r5l57")

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2(1, -25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(578.5, 659)
shape = SubResource("RectangleShape2D_i51qa")

[node name="Sprite2D" type="Sprite2D" parent="floor"]
position = Vector2(578.5, 659)
scale = Vector2(18.4219, 0.40625)
texture = SubResource("GradientTexture2D_b3ngo")

[node name="BulletSpawner" parent="." instance=ExtResource("3_3a2q4")]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="floor-hit" to="floor-hit" method="_on_area_entered"]
[connection signal="body_entered" from="floor-hit" to="." method="_on_floorhit_body_entered"]
